[gd_scene load_steps=20 format=3 uid="uid://ckhcaotfnev0l"]

[ext_resource type="Script" path="res://Scripts/enemy_battlecruiser.gd" id="1_kd0a8"]
[ext_resource type="Texture2D" uid="uid://clgidqtklc1eo" path="res://Graphics/Enemies/Deaths/Kla'ed - Battlecruiser - Destruction.png" id="2_2vugk"]
[ext_resource type="Texture2D" uid="uid://by3amx7jlh8fb" path="res://Graphics/Enemies/Kla'ed - Battlecruiser - Base.png" id="3_8qx4n"]

[sub_resource type="AtlasTexture" id="AtlasTexture_j2uho"]
atlas = ExtResource("2_2vugk")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_5fv1x"]
atlas = ExtResource("2_2vugk")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_vxu8h"]
atlas = ExtResource("2_2vugk")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_2730m"]
atlas = ExtResource("2_2vugk")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ucka4"]
atlas = ExtResource("2_2vugk")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_bd51k"]
atlas = ExtResource("2_2vugk")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_62aqc"]
atlas = ExtResource("2_2vugk")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_mtclv"]
atlas = ExtResource("2_2vugk")
region = Rect2(896, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_4j348"]
atlas = ExtResource("2_2vugk")
region = Rect2(1024, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_uvk0d"]
atlas = ExtResource("2_2vugk")
region = Rect2(1152, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_v1say"]
atlas = ExtResource("2_2vugk")
region = Rect2(1280, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_68odr"]
atlas = ExtResource("2_2vugk")
region = Rect2(1408, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ril7b"]
atlas = ExtResource("2_2vugk")
region = Rect2(1536, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_kqq0k"]
atlas = ExtResource("2_2vugk")
region = Rect2(1664, 0, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_cd1tv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_j2uho")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5fv1x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vxu8h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2730m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ucka4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bd51k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_62aqc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mtclv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4j348")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uvk0d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v1say")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_68odr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ril7b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kqq0k")
}],
"loop": false,
"name": &"death",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_8qx4n")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_lougf"]
radius = 17.7778
height = 80.0

[node name="EnemyBattlecruiser" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 133
script = ExtResource("1_kd0a8")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
rotation = 3.14159
sprite_frames = SubResource("SpriteFrames_cd1tv")
animation = &"death"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(1.8, 1.2)
shape = SubResource("CapsuleShape2D_lougf")

[node name="RayCast2D" type="Node" parent="."]

[node name="shotcooldown" type="Timer" parent="."]
wait_time = 3.0

[node name="movecooldown" type="Timer" parent="."]
wait_time = 2.0

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="timeout" from="shotcooldown" to="." method="_on_shotcooldown_timeout"]
[connection signal="timeout" from="movecooldown" to="." method="_on_movecooldown_timeout"]
